# ida-python-bytecode

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/bytecode/instruction/: definition.hpp  flags.hpp  intrinsics.cpp  intrinsics.hpp  operand_types.hpp
src/bytecode/opcodes/: opcodes_27.cpp  opcodes_27.hpp  opcodes_312.cpp  opcodes_312.hpp  opcodes_314.cpp  opcodes_314.hpp  opcodes_36.cpp  opcodes_36.hpp  table.cpp  table.hpp
src/bytecode/operators/: binary.cpp  binary.hpp  compare.cpp  compare.hpp
src/core/common/: platform.hpp  types.hpp
src/core/config/: constants.hpp
src/core/version/: magic.cpp  magic.hpp  version.hpp
src/format/header/: header.hpp
src/ida/common/: registers.hpp  specflags.hpp
src/ida/loader/: loader.cpp
src/ida/processor/: processor.cpp
src/marshal/code_object/: code_object.hpp
src/marshal/types/: type_codes.hpp
